--- a/crates/ext-tauri/Cargo.toml
+++ b/crates/ext-tauri/Cargo.toml
@@ -21,6 +21,8 @@ tauri-build = { version = "2", features = [] }
 tauri = { version = "2", features = [] }
 tauri-plugin-opener = "2"
 tauri-plugin-shell = "2"
+tauri-plugin-dialog = "2.6.0"
+
 serde = { workspace = true }
 serde_json = { workspace = true }
 tokio = { workspace = true }
