--- a/packages/shared/tsconfig.json
+++ b/packages/shared/tsconfig.json
@@ -10,5 +10,7 @@
     "forceConsistentCasingInFileNames": true,
     "declaration": true
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist"]
+
 }
